Attempt fix spacing again

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,7 @@ body {
   font-size: 60px;
   padding-top: 20px;
   padding-bottom: 40px;
-  marker-offset: 10px;
+  resize: both;
 }
 
 #my_picture {
